--- a/css/icon.css
+++ b/css/icon.css
@@ -1,15 +1,20 @@
-.backicon {
-  color: #FFF;
-}
-
 .icon-text {
 	position: relative;
 	top: 20px;
+	background-color: #deae9c;
+	color: #bd5d38;
+	border: none;
+	margin-left: 45px;
+	padding: 15px;
+	border-radius: 15px;
+	width: 150px;
+	height: 70px;
+	text-align: center;
 	font-size: 20px;
 	transition: 0.3s;
 }
 
 .icon-text:hover {
+	background-color: #bd5d38;
 	color: #FFF;
-	top: 15px;
 }
