--- a/css/custom.css
+++ b/css/custom.css
@@ -72,4 +72,15 @@ span.date{
 .project-item :hover{
   background-color: #943611;
 }
+
+.badge-icons {
+  font-size: 1rem;
+  position: relative;
+  top: 0px;
+  left: 0px;
+}
+
+.badge-item{
+  color: white;
+}
   /* FIN */
