--- a/css/icon.css
+++ b/css/icon.css
@@ -1,16 +1,17 @@
 .icon-text {
 	position: relative;
-	top: 20px;
+	/* top: 20px; */
 	background-color: #deae9c;
 	color: #bd5d38;
 	border: none;
-	margin-left: 45px;
-	padding: 15px;
-	border-radius: 15px;
+	
+	/* padding: 15px; */
+	border-radius: 10px;
 	width: 150px;
-	height: 70px;
+	/* height: 70px; */
 	text-align: center;
 	font-size: 20px;
+	margin: auto;
 	transition: 0.3s;
 }
 
