--- a/css/icon.css
+++ b/css/icon.css
@@ -7,12 +7,14 @@
 	
 	/* padding: 15px; */
 	border-radius: 10px;
-	width: 150px;
+	width: 100%;
 	/* height: 70px; */
 	text-align: center;
 	font-size: 20px;
 	margin: auto;
 	transition: 0.3s;
+	padding: 0;
+	margin: 0;
 }
 
 .icon-text:hover {
