created template.html for use as well as modified some of custom.css

--- a/css/custom.css
+++ b/css/custom.css
@@ -42,7 +42,7 @@ Developer: John */
   margin: 0px;
   display: grid;
   grid-template-columns: 120px 1fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: 40px 1fr;
 }
 
 .title {
@@ -61,7 +61,7 @@ Developer: John */
 }
 .skills-section {
     padding-top: 20px;
-    padding-bottom: 20px;
+    padding-bottom: 0px;
 }
 
 /* FIN  */
