got the logic working/ wanting to fix the styling after

--- a/css/custom.css
+++ b/css/custom.css
@@ -87,4 +87,10 @@ span.date{
 .badge-item{
   color: white;
 }
+
+
+.modal-content{
+  background: transparent !important;
+  border: none !important;
+}
   /* FIN */
