--- a/css/custom.css
+++ b/css/custom.css
@@ -76,10 +76,17 @@ span.date{
 }
 
 .badge-icons {
-  font-size: 1rem;
-  position: relative;
-  top: 0px;
-  left: 0px;
+  font-size: 1.5rem;
+}
+
+.skills-icons{
+  font-size: 2.5rem;
+}
+
+.skills-icons img{
+  height: 2.5rem;
+  width: 2.5rem;
+
 }
 
 .badge-item{
