--- a/landing_page.css
+++ b/landing_page.css
@@ -1,13 +1,12 @@
 .car-scaffold{
     height: 100vh !important;
-    width: 100 !important;
+    width: 100% !important;
     padding-bottom: 0 !important;
     margin: 0 !important;
-    box-sizing: border-box;
 }
 
 body{
-    padding-left: 0vh !important;
+    padding-left: 0 !important;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -21,15 +20,36 @@ body{
     margin: 0 !important;
 }
 
-.column {
-    float: left;
-    width: 33.33%;
-    padding: 5px;
+.container {
+    padding: 0px;
+    margin: 0px;
+    width: 100%;
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 33.3% 33.3% 33.3%;
+    grid-template-rows: 100%;
+  }
+
+  .pic-1 {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    align-self: stretch;
+  }
+  .pic-2 {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+    align-self: stretch;
   }
   
-  /* Clear floats after image containers */
-  .row::after {
-    content: "";
-    clear: both;
-    display: table;
+  .pic-3 {
+    grid-column: 3 / 4;
+    grid-row: 1 / 2;
+    align-self: stretch;
   }
+
+  .img-fit {
+    height: 100vh;
+    width: 100%;
+    object-fit: cover;
+  }
+  
