added SEEVEE title at the bottom

--- a/landing_page.css
+++ b/landing_page.css
@@ -10,7 +10,7 @@
     padding-bottom: 0 !important;
     padding-left: 0 !important;
     margin: 0 !important;
-    position: relative;
+    position: fixed;
 }
 
 html, body {
@@ -33,11 +33,12 @@ html, body {
     height: 100vh;
     padding-left: 0;
     padding-right: 0;
-    position: absolute;
-    margin: 0;
+    position: fixed;
+    left: 0;
     display: grid;
-    grid-template-columns: 33.3% 33.3% 33.3%;
-    grid-template-rows: 100%;
+    grid-template-columns: 33.3vw 33.3vw 33.3vw;
+    grid-template-rows: 100vh;
+    z-index: -1;
   }
 
   .pic-1 {
@@ -62,5 +63,18 @@ html, body {
     width: 100vw;
     object-fit: cover;
     justify-self: center;
+  }
+
+  .seevee {
+      z-index: 1;
+      position: fixed;
+      bottom: 0;
+      right: 0;
+      padding-right: 20px;
+      margin: 0;
+      color: #FFFFFF;
+      font-family: 'Lato', sans-serif;
+      font-weight: bold;
+      font-size: 4.5em;
   }
   
