--- a/css/icon.css
+++ b/css/icon.css
@@ -2,7 +2,7 @@
 	position: relative;
 	/* top: 20px; */
 	background-color: #deae9c;
-	color: #bd5d38;
+	color: #977060;
 	border: none;
 	
 	/* padding: 15px; */
@@ -18,6 +18,6 @@
 }
 
 .icon-text:hover {
-	background-color: #bd5d38;
+	background-color: ##977060;
 	color: #FFF;
 }
