--- a/landing_page.css
+++ b/landing_page.css
@@ -14,6 +14,7 @@
 }
 
 html, body {
+    padding-top: 0 !important;
     padding-left: 0 !important;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -31,8 +32,8 @@ html, body {
 .container {
     width: 100vw;
     height: 100vh;
-    padding-left: 0;
-    padding-right: 0;
+    padding-left: 0 !important;
+    padding-right: 0 !important;
     position: fixed;
     left: 0;
     display: grid;
