--- a/john/customcolor.css
+++ b/john/customcolor.css
@@ -24,8 +24,14 @@
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  --primary: #007bff;
-  --hover: #617bff;
+  /* CHANGEABLE */
+  /* --primary: #5ba89e; */
+  --primary: #253a25;
+  --background: #000;
+  --text: #fff;
+  /* use to be grey #343a40 */
+  --hover: #0cdceb;
+  /* FIN */
   --secondary: #6c757d;
   --success: #28a745;
   --info: #17a2b8;
@@ -40,6 +46,46 @@
   --breakpoint-xl: 1200px;
   --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+}
+
+.social-icons-sm .social-icon-sm:hover {
+  background-color: var(--primary);
+}
+
+div.project-descript h3 {
+  padding-top: 10px;
+  color: var(--primary);
+}
+
+.circle {
+  color: var(--primary);
+  font-size: 70%;
+  vertical-align: middle;
+  padding-left: 5px;
+}
+
+.icon-text:hover {
+	background-color: var(--primary);
+	color: #FFF;
+}
+
+.icon-text {
+	position: relative;
+	/* top: 20px; */
+	background-color: #c7c6c6;
+	color: var(--primary);
+	border: none;
+	
+	/* padding: 15px; */
+	border-radius: 5px;
+	width: 100%;
+	/* height: 70px; */
+	text-align: center;
+	font-size: 18px;
+	margin: auto;
+	transition: 0.3s;
+	padding: 0;
+	margin: 0;
 }
 
 *,
@@ -67,7 +113,7 @@ body {
   line-height: 1.5;
   color: #212529;
   text-align: left;
-  background-color: #fff;
+  background-color: var(--background);
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
@@ -365,7 +411,7 @@ h1, h2, h3, h4, h5, h6,
   font-family: "Saira Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 700;
   line-height: 1.2;
-  color: #343a40;
+  color: var(--text);
 }
 
 h1, .h1 {
