--- a/css/landing_page.css
+++ b/css/landing_page.css
@@ -42,6 +42,28 @@ html, body {
     z-index: -1;
   }
 
+  .container1 {
+    width: 33.3vw;
+    height: 100vh;
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+    position: fixed;
+    left: 0;
+    display: grid;
+    z-index: -1;
+  }
+
+  .container2 {
+    width: 33.3vw;
+    height: 100vh;
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+    position: fixed;
+    left: 33.3vw;
+    display: grid;
+    z-index: -1;
+  }
+
   .pic-1 {
     grid-column: 1 / 2;
     grid-row: 1 / 2;
