attempt index.html mobile view

--- a/css/landing_page.css
+++ b/css/landing_page.css
@@ -4,6 +4,20 @@
   margin: 0;
 }
 
+@media only screen and (max-width: 600px) {
+  /* .carousel {
+    width: 100vw;
+  }
+
+  .carousel_img {
+    width: 100vw;
+  }
+
+  .carousel__slide{
+    width: 100vw;
+  } */
+}
+
 .carousel {
   width: 33.4vw;
   height: 100vh;
