funct to clear index.html in mobile view temp added but uncommented

--- a/css/landing_page.css
+++ b/css/landing_page.css
@@ -6,15 +6,7 @@
 
 @media only screen and (max-width: 600px) {
   /* .carousel {
-    width: 100vw;
-  }
-
-  .carousel_img {
-    width: 100vw;
-  }
-
-  .carousel__slide{
-    width: 100vw;
+   display: none; 
   } */
 }
 
