--- a/css/landing_page.css
+++ b/css/landing_page.css
@@ -55,8 +55,10 @@
   position: absolute;
   top: 50%;
   transform: translateY(-50%) scale(3);
-  background: transparent;
-  border:0;
+  background: rgba(0,0,0,0.5);
+  height: 100vh;
+  width: 40px;
+  border: 0;
   cursor: pointer;
 }
 
