--- a/john/customcolor.css
+++ b/john/customcolor.css
@@ -72,7 +72,7 @@ div.project-descript h3 {
 .icon-text {
 	position: relative;
 	/* top: 20px; */
-	background-color: #c7c6c6;
+	background-color: #ffffff;
 	color: var(--primary);
 	border: none;
 	
@@ -86,6 +86,14 @@ div.project-descript h3 {
 	transition: 0.3s;
 	padding: 0;
 	margin: 0;
+}
+
+.goodies{
+  background-color: var(--primary) !important;
+}
+
+.goodies:hover{
+  background-color: #495057 !important;
 }
 
 *,
