--- a/john/tictactoe/styles.css
+++ b/john/tictactoe/styles.css
@@ -20,7 +20,7 @@
 
 h2 {
     text-align: center;
-    font-family: cursive;
+    font-family: Arial, Helvetica, sans-serif;
     font-weight: 700;
     color: red;
 }
@@ -31,7 +31,7 @@ h2 span {
 }
 
 .GameStatus{
-    font-family: cursive;
+    font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     font-size: x-large;
     color: red;
@@ -40,7 +40,7 @@ h2 span {
 
 .yeet{
     padding-top: 20px;
-    font-family: cursive;
+    font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     font-size: large;
     color: black;
