--- a/nick/nick.css
+++ b/nick/nick.css
@@ -25,8 +25,8 @@
   --gray: #6c757d;
   --gray-dark: #343a40;
   /* CHANGEABLE */
-  --primary: #5ba89e;
-  --primarybar: #5ba89e;
+  --primary: #FF572E;
+  --primarybar: #FF572E;
   --background: #fff;
   --text: #343a40;
   --hover: #0cdceb;
