Serena: add more to projects

--- a/serena/serena.css
+++ b/serena/serena.css
@@ -30,7 +30,7 @@
   --background: #fff;
   --text: #343a40;
   --hover: #0cdceb;
-  --projscaf: #51575e;
+  --projscaf: #484848;
   --test: rgb(21, 231, 21);
   /* FIN */
   --secondary: #c29f90;
