--- a/nick/nick.css
+++ b/nick/nick.css
@@ -54,30 +54,59 @@
   background-color: var(--primary);
 }
 
-div.project-descript h3 {
+.project-scaffold div.project-descript h3 {
   padding-top: 10px;
-  color: var(--primary)
+  color: var(--primary);
 }
 
-.resume-section-content ul li div em b{
-  color: var(--text)
+.resume-section-content ul li div em b {
+  color: var(--text);
 }
 
-.resume-section-content div div.title{
-  color: var(--text)
+.resume-section-content div div.title {
+  color: var(--text);
 }
 
-.project-scaffold{
+div.project-scaffold {
   background-color: var(--projscaf);
-  transition: 0.3s;
+  border-radius: 8px;
 }
 
-.project-scaffold:hover{
-  background-color: var(--projscafHover)
+.project-scaffold:hover {
+  background-color: var(--projscafHover);
+  transition: background-color 0.25s ease-in-out;
 }
 
-div.project-descript{
+.project-scaffold:hover .project-descript .click-text {
+  opacity: 100%;
+  transition: opacity 0.25s ease-in-out;
+}
+
+.project-scaffold div.project-descript {
   color: #fff;
+  padding: 30px;
+  width: 60%;
+}
+
+.project-scaffold .project-image {
+  width: 40%;
+}
+
+.project-descript .click-text {
+  opacity: 0%;
+  color: #9eaaed;
+  margin-top: 20px;
+}
+
+.project-descript .date {
+  color: var(--primary);
+  font-style: italic;
+}
+
+.project-descript .stack-icon {
+  color: white;
+  margin-top: 15px;
+  margin-right: 5px;
 }
 
 .circle {
